--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-image: url('../images/clapperboard-cinema-tickets-space.jpg');
+    background-image: url('../images/wepik-export-202402281959182WGn.jpeg');
     background-size: cover;
     text-align: center;
     margin: 0;
