--- a/styles/login.css
+++ b/styles/login.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-image: url('../images/clapperboard-cinema-tickets-space.jpg');
+    background-image: url('../images/wepik-export-202402281959182WGn.jpeg');
     background-size: cover;
     text-align: center;
     margin: 0;
@@ -57,20 +57,21 @@ body {
 }
 
 .form-group button {
-    background-color: gold;
+    background-color: #e41a1a;
     color: #fff;
     padding: 10px;
     border: none;
     border-radius: 3px;
     cursor: pointer;
-    transition: background-color 0.3s, color 0.3s, transform 0.3s; /* Add color transition */
+    transition: background-color 0.3s, color 0.3s, transform 0.3s;
+    text-decoration: none; /* Add this line to remove underline */
 }
 
 .form-group button:hover {
-    background-color: #2980b9;
-    color: gold;
-    transform: scale(1.1);
+    background-color: #150c0c;
 }
+
+
 
 .disclaimer {
     color: #fff;
