--- a/styles/login.css
+++ b/styles/login.css
@@ -1,7 +1,8 @@
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-image: url('../images/wepik-export-202402281959182WGn.jpeg');
+    background-image: url('../images/below_1.jpeg');
     background-size: cover;
+    background-repeat: no-repeat; /* Prevent background replication */
     text-align: center;
     margin: 0;
     padding: 0;
@@ -11,18 +12,24 @@ body {
     height: 100vh;
 }
 
+/* rest of your CSS remains the same */
+
 .login-container {
     max-width: 450px;
-    background-color: rgb(40, 36, 36);
+    background-color: black;
     width: 80%;
     padding: 40px;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+
+    /* Add margin to the right side to move it a bit to the right */
+    margin-left: 400px; /* You can adjust this value as needed */
 }
+
 
 .login-container h2 {
     color: #fff;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 }
 
 .login-form {
@@ -68,7 +75,9 @@ body {
 }
 
 .form-group button:hover {
-    background-color: #150c0c;
+    background-color: black;
+    color: gold;
+    transform: scale(1.1);
 }
 
 
