--- a/styles/index.css
+++ b/styles/index.css
@@ -28,6 +28,18 @@ body {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
+  animation: fadeInDown 0.5s ease;
+}
+
+@keyframes fadeInDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .logo {
@@ -106,7 +118,7 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #fff; /* changed to white */
+  color: #020202; /* changed to white */
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   font-size: 15px;
@@ -157,11 +169,34 @@ main {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* adjusted box-shadow */
   position: relative;
   overflow: hidden;
-  transition: box-shadow 0.3s ease-in-out; /* added transition */
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease; /* added transition */
+  animation: fadeInUp 0.5s ease;
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 
 .movie:hover {
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2); /* adjusted box-shadow on hover */
+  transform: scale(1.05);
+  animation: pulse 1s infinite alternate; /* added animation */
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.05);
+  }
 }
 
 .movie img {
