--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,42 +8,42 @@
     <link rel="stylesheet" href="/styles/login.css"> <!-- Include the custom CSS file -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <style>
-  </style>
+        
+    </style>
 </head>
 <body>
     <div class="container mt-4">
         <div class="container px-4 py-5 px-md-5 text-center text-lg-start my-5 blurry-background"> 
-            <div class="row gx-lg-5 align-items-center mb-5">
-                <div class="col-lg-6 mb-5 mb-lg-0">
-                </div>
-                <div class="col-lg-6 mb-5 mb-lg-0">
-                    <div class="card bg-glass">
-                        <div class="card-body px-4 py-5">
-                            <div class="login-container"> 
-                                <h2>Login</h2>
-                                <form class="login-form" action="/login" method="POST"> 
-                                    <div class="form-group">
-                                        <label for="email">Email address:</label> 
-                                        <input type="email" name="email" id="email" class="form-control" required>
-                                    </div>
-                                    
-                                    <div class="form-group">
-                                        <label for="password">Password:</label> 
-                                        <input type="password" name="password" id="password" class="form-control" required>
-                                    </div>
-                                    
-                                    <div class="form-group">
-                                        <button type="submit" class="btn btn-primary btn-block">Sign In</button> 
-                                    </div>
-                                    
-                                    <div class="disclaimer">
-                                        Don't have an account yet? <a href="/signup">Sign up</a> 
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+            <div class="position-relative"> <!-- Removed col-lg-6 mb-5 mb-lg-0 -->
+                <!-- Video Background -->
+                <video class="bg-video" autoplay muted loop>
+                    <source src="/videos/Background3.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+                <!-- Centered Text -->
+                <!-- Added text -->
+            </div>
+            <div class="login-container"> 
+                <h2>Login</h2>
+                <form class="login-form" action="/login" method="POST"> 
+                    <div class="form-group">
+                        <label for="email">Email address:</label> 
+                        <input type="email" name="email" id="email" class="form-control" required>
                     </div>
-                </div>
+                    
+                    <div class="form-group">
+                        <label for="password">Password:</label> 
+                        <input type="password" name="password" id="password" class="form-control" required>
+                    </div>
+                    
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-primary btn-block">Sign In</button> 
+                    </div>
+                    
+                    <div class="disclaimer">
+                        Don't have an account yet? <a href="/signup">Sign up</a> 
+                    </div>
+                </form>
             </div>
         </div>
     </div>
