--- a/views/main.ejs
+++ b/views/main.ejs
@@ -7,6 +7,7 @@
     <title>CineSurf</title>
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+    <link rel="icon" href="/images/logo2.jpg" type="image/x-icon" />
     <style>
         .hero {
             background-image: url('/images/back2.jpg');
@@ -52,6 +53,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h2>Welcome to CineSurf</h2>
+                
                 <p>Your ultimate destination for movie reviews and recommendations.</p>
                 <div class="cta-buttons">
                     <a href="/login" class="cta-button">Login</a>
@@ -61,13 +63,7 @@
             </div>
         </section>
 
-        <!-- <div class="movie">
-            <img src="path_to_your_image.jpg" alt="Movie Poster">
-            <div class="movie-info">
-            </div>
-            <div class="overview">
-            </div> 
-        </div> -->
+        
         <!-- Repeat the above div for each movie -->
     </main>
     <footer class="footer">
