--- a/views/movie-info.ejs
+++ b/views/movie-info.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Under Development</title>
+    
+    <link rel="icon" class = "amrutha" href="/images/logo2.jpg" type="image/x-icon" />
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -23,6 +25,9 @@
         }
         p {
             color: #666;
+        }
+        .amrutha {
+            border-radius: 200%;
         }
     </style>
 </head>
