--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -221,6 +221,8 @@ main {
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
+
+
 @keyframes fadeInUp {
   0% {
     opacity: 0;
@@ -234,6 +236,11 @@ main {
 
 .movie img {
   width: 100%;
+  transition: transform 0.5s;
+}
+
+.movie:hover img {
+  transform: scale(1.1); /* Scale up by 10% on hover */
 }
 
 .movie-info {
