--- a/views/dummy.ejs
+++ b/views/dummy.ejs
@@ -7,6 +7,7 @@
   <title>CineSurf</title>
   <link rel="stylesheet" href="/styles/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="icon" href="/images/logo2.jpg" type="image/x-icon" />
 </head>
 
 <body>
