--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -319,8 +319,8 @@ main {
   display: none;
   position: absolute;
   background-color: #000000;
-  min-width: 160px;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  min-width: 200px;
+  box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.2);
   z-index: 1;
 }
 
