--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -381,6 +381,7 @@ body {
     color: white;
     text-align: center;
     padding: 20px;
+    position: fixed;
     bottom: 0;
     width: 100%;
 }
